--- a/GooglePlayApi.Popup/GooglePlayApi.Popup.csproj
+++ b/GooglePlayApi.Popup/GooglePlayApi.Popup.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>rtm516</Authors>
+    <Title>$(AssemblyName)</Title>
+    <RepositoryUrl>https://github.com/rtm516/GooglePlayApi</RepositoryUrl>
+	<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+	<PackageTags>GooglePlay,PlayStore,API,Android</PackageTags>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
