--- a/GooglePlayAPI/GooglePlayApi.csproj
+++ b/GooglePlayAPI/GooglePlayApi.csproj
@@ -29,4 +29,11 @@
     <Protobuf Include="GooglePlay.proto" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
