--- a/GooglePlayApi.Popup/GooglePlayApi.Popup.csproj
+++ b/GooglePlayApi.Popup/GooglePlayApi.Popup.csproj
@@ -26,4 +26,11 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
